syntax = "proto3";

message bytesBlock {
    bytes header = 1;
    repeated bytes transactions = 2;
    uint32 height = 3;
}
